--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
 .App {
   text-align: center;
 }
+.btn{
+  padding: 0.5rem 1rem;
+  background-color: firebrick;
+  color: white;
+  font-weight: 600;
+  letter-spacing: 1px;
+  border-radius: 5px;
+  transition: 0.3s;
+  border-color: none;
+  }
+.btn:hover{
+    box-shadow: 5px 5px 15px 0px;
+    font-size: 1.2rem;
+}
