--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -5,7 +5,7 @@
     padding: 1rem 0.5rem;
     margin: 1rem auto;
    
-    border: 1px solid #666;
+    background-color: rgba(253, 253, 253, 0.651);
     border-radius: 5px;
      box-shadow:0px 0px 10px -2px; 
     transition: 0.5s;
